--- a/generator/pubspec.yaml
+++ b/generator/pubspec.yaml
@@ -21,7 +21,11 @@ dependencies:
   dio: ^5.8.0
   lean_builder: ^0.1.2
   protobuf: ^5.0.0
-  retrofit: ^4.9.0
+  retrofit:
+    git:
+      url: https://github.com/nofyso/retrofit.dart-20251128
+      path: retrofit
+      ref: main
   source_gen: '>=3.1.0 <5.0.0'
 
 dev_dependencies:
